swagger list, detail post
